# MoWheel-Controller

./: README.md  package-lock.json  package.json
lib_PCAN/: CMakeLists.txt  main.cpp
lib_PCAN/include/: PCAN.hpp  motor.h  motor_dm.h  pid.h
lib_PCAN/src/: PCAN.cpp  motor.cpp  motor_dm.cpp  pid.cpp
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  motor_control.rs
src/components/: Layout.vue
src/router/: index.js
src/store/: index.js
src/styles/: index.css  theme.css
src/utils/: charts.js
src/views/: DataMonitor.vue  Home.vue  MotorControl.vue  ParameterConfig.vue  SimpleMotorControl.vue  SystemSettings.vue
