cmake_minimum_required(VERSION 3.10)
project(PCAN_Host)
set(CMAKE_CXX_STANDARD 17)
set(PCAN_LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
link_directories(${PCAN_LIB_DIR})
# file (GLOB_RECURSE PCAN_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
file (GLOB_RECURSE PCAN_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
add_executable(PCAN_Host main.cpp   ${PCAN_SOURCES})
target_link_libraries(PCAN_Host ${PCAN_LIB_DIR}/PCANBasic.lib)